[gd_scene load_steps=42 format=2]

[ext_resource path="res://src/images/characters/vagabond/vagabond-idle/vagabond-idle-0.png" type="Texture" id=1]
[ext_resource path="res://src/images/characters/vagabond/vagabond-idle/vagabond-idle-1.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/player/player.gd" type="Script" id=3]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-0.png" type="Texture" id=4]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-1.png" type="Texture" id=5]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-3.png" type="Texture" id=6]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-2.png" type="Texture" id=7]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-4.png" type="Texture" id=8]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-7.png" type="Texture" id=9]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-5.png" type="Texture" id=10]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run/vagabond-run-6.png" type="Texture" id=11]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run-end/vagabond-run-end-0.png" type="Texture" id=12]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run-end/vagabond-run-end-1.png" type="Texture" id=13]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run-end/vagabond-run-end-3.png" type="Texture" id=14]
[ext_resource path="res://src/images/characters/vagabond/vagabond-run-end/vagabond-run-end-2.png" type="Texture" id=15]
[ext_resource path="res://src/images/characters/vagabond/vagabond-jump/vagabond-jump-0.png" type="Texture" id=16]
[ext_resource path="res://src/images/characters/vagabond/vagabond-jump/vagabond-jump-1.png" type="Texture" id=17]
[ext_resource path="res://src/images/characters/vagabond/vagabond-jump/vagabond-jump-2.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -95 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -95 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "jump"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -35 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "land"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 0.5 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -35 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.6
loop = true
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -95 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "run-end"
length = 0.4
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -95 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "land"

[sub_resource type="AnimationNodeBlendSpace1D" id=19]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = 1.0
value_label = "0"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run-end"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=4]
states/idle/node = SubResource( 3 )
states/idle/position = Vector2( 267, 59 )
states/jump/node = SubResource( 19 )
states/jump/position = Vector2( 267, 154.378 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 524, 59 )
states/run-end/node = SubResource( 11 )
states/run-end/position = Vector2( 524, 154.378 )
transitions = [ "idle", "run", SubResource( 9 ), "run", "run-end", SubResource( 12 ), "run-end", "idle", SubResource( 13 ), "run-end", "run", SubResource( 14 ), "idle", "jump", SubResource( 20 ), "jump", "idle", SubResource( 21 ), "run-end", "jump", SubResource( 22 ), "run", "jump", SubResource( 23 ) ]
start_node = "idle"
graph_offset = Vector2( 8.62405e-07, 7.61249 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 38 )

[node name="player" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -95 )

[node name="animations" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="animations"]
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 15 )
anims/land = SubResource( 16 )
anims/run = SubResource( 7 )
anims/run-end = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="animations"]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 5 )
parameters/jump/blend_position = 1.01295

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -36 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="raycast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="raycast"]
enabled = true
cast_to = Vector2( 0, 150 )
collision_mask = 4

[node name="timers" type="Node2D" parent="."]

[node name="landTimer" type="Timer" parent="timers"]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timers/landTimer" to="." method="_on_landTimer_timeout"]
